--- a/src/components/Comments.astro
+++ b/src/components/Comments.astro
@@ -11,7 +11,7 @@ interface Props {
 
 const { id, data } = Astro.props.post
 
-const path = `/posts/${id}`
+const path = `${import.meta.env.BASE_URL}/posts/${id}`
 const url = `${Astro.site?.href}${path}`
 
 const provider = getProvider()
