--- a/src/components/PostCategory.astro
+++ b/src/components/PostCategory.astro
@@ -9,7 +9,7 @@ interface Props {
 const { category } = Astro.props
 
 function getCategoryUrl(category: string) {
-  return `/categories/${getPathFromCategory(category, themeConfig.site.categoryMap)}`
+  return `${import.meta.env.BASE_URL}/categories/${getPathFromCategory(category, themeConfig.site.categoryMap)}`
 }
 ---
 
