--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -27,9 +27,11 @@ pre.astro-code {
 }
 
 @media (prefers-color-scheme: dark) {
+  pre.astro-code {
+    background-color: var(--shiki-dark-bg) !important;
+  }
   .astro-code,
   .astro-code span {
     color: var(--shiki-dark) !important;
-    background-color: var(--shiki-dark-bg) !important;
   }
 }
